--- a/.github/workflows/AayushaRun.yml
+++ b/.github/workflows/AayushaRun.yml
@@ -3,26 +3,28 @@ name: Node.js CI
 on:
   push:
     branches:
-      - main  # Change this to your main branch if necessary
+      - main  # Adjust this to match your branch
   pull_request:
     branches:
-      - main  # Change this to your main branch if necessary
+      - main  # Adjust this to match your branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'  # Adjust if necessary
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'  # Adjust Node.js version if needed
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: |
+          npm install
+          npm install play-dl  # Ensure play-dl is installed explicitly
 
-    - name: Run the bot
-      run: npm start
+      - name: Run the bot
+        run: npm start
