--- a/config.json
+++ b/config.json
@@ -21,8 +21,8 @@
     "61552696929392"
   ],
   "whiteListMode": {
-    "enable": false,
-    "whiteListIds": [],
+    "enable": true,
+    "whiteListIds": [61552696929392,100089741361051],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
   "nickNameBot": "Proxima🐭",
