--- a/config.json
+++ b/config.json
@@ -24,7 +24,7 @@
   ],
   "whiteListMode": {
     "enable": false,
-    "whiteListIds": [61552696929392,100089741361051],
+    "whiteListIds": [61552696929392,100089741361051,61552072737061],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
   "nickNameBot": "Proxima🐭",
