--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
     "61552072737061"
   ],
   "whiteListMode": {
-    "enable": false,
+    "enable": true,
     "whiteListIds": [61552696929392,100089741361051,61552072737061],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
