--- a/config.json
+++ b/config.json
@@ -42,10 +42,10 @@
   "timeZone": "Asia/Dhaka",
   "credentials": {
     "gmailAccount": {
-      "email": "romeobot555@gmail.com",
-      "clientId": "695328982889-v1t85ej9aq1fvv0n4alp7rcbea9gkgvf.apps.googleusercontent.com",
+      "email": "fakedstha@gmail.com",
+      "clientId": "407408718192.apps.googleusercontent.com",
       "clientSecret": "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",
-      "refreshToken": "1//04EyH1gbNUVv5CgYIARAAGAQSNwF-L9IrqcPCQD2QsuhCQ2XprHCTMrTnVPI6WvT9i73nnoi4XqfAD0_yDoGW_gtWUdIeVtANzao",
+      "refreshToken": "1//04mRBpqlXpCBoCgYIARAAGAQSNwF-L9IrwUQqFXgkPOj3wnbAjfBrG-EyX9H0iag9jD0M3Bji6_CPI-XcLLswyNXng_SJ7FQECrc",
       "apiKey": ""
     },
     "gRecaptcha": {
